# minidsp-rs

./: .gitignore  Cargo.toml  flake.nix  foo.nix  module.nix  package.nix  result
daemon/: Cargo.toml
daemon/src/: device_manager.rs
daemon/src/discovery/: tasks.rs
daemon/src/http/: helpers.rs  mod.rs
daemon/src/http/openapi/: mod.rs  redoc.html
daemon/src/tcp/: mod.rs
devtools/: Cargo.toml
devtools/src/: main.rs
devtools/src/codegen/: mod.rs
devtools/src/codegen/flexdl/: mod.rs
devtools/src/codegen/flexdrc/: mod.rs
devtools/src/codegen/flexhtx/: config.xml  mod.rs
docs/src/: devices.md
minidsp/: Cargo.toml
minidsp/src/: builder.rs  lib.rs  logging.rs  tcp_server.rs
minidsp/src/formats/: xml_config.rs
minidsp/src/transport/: hub.rs  mod.rs  multiplexer.rs
minidsp/src/transport/hid/: stream.rs
minidsp/src/transport/mock/: mod.rs
minidsp/src/transport/net/: codec.rs
minidsp/src/transport/net/discovery/: server.rs
minidsp/src/transport/ws/: mod.rs
protocol/: Cargo.toml
protocol/src/: commands.rs  lib.rs
protocol/src/device/: flexdl.rs  flexdrc.rs  flexhtx.rs  mod.rs  probe.rs
upgradetest/: Dockerfile
